--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" variant="6xAndEarlier" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4514" systemVersion="13A3017" targetRuntime="iOS.CocoaTouch.iPad" variant="6xAndEarlier" propertyAccessControl="none" initialViewController="4">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <development version="4600" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Database Main View Controller - Articles-->
@@ -102,9 +102,6 @@
                         <rect key="frame" x="0.0" y="20" width="768" height="955"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="Wq2-k0-yLZ">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="955"/>
-                            </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="W3t-mA-gnO">
                                 <rect key="frame" x="75" y="891" width="70" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -242,7 +239,6 @@
                         <outlet property="compDirLabel" destination="BiD-aA-ree" id="7eV-Yi-vUm"/>
                         <outlet property="latLabel" destination="Ntr-63-WdG" id="cc9-kY-QIc"/>
                         <outlet property="longLabel" destination="Ywa-cJ-Qd1" id="RDr-p6-aLG"/>
-                        <outlet property="mapView" destination="Wq2-k0-yLZ" id="21F-en-kFr"/>
                         <outlet property="speedLabel" destination="MUH-pJ-kjN" id="0A8-ns-G0B"/>
                         <outlet property="sunLabel" destination="BPz-O2-DUC" id="7Zi-YS-dS0"/>
                         <outlet property="tempHighLabel" destination="PsP-tx-hRZ" id="eHo-EQ-OpC"/>
