--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
@@ -267,7 +267,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="MONTH DATE TIME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hx4-lx-dLG">
-                                <rect key="frame" x="20" y="652" width="728" height="75"/>
+                                <rect key="frame" x="108" y="669" width="553" height="75"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -299,6 +299,10 @@
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="RaB-cQ-7BY">
                                 <rect key="frame" x="20" y="570" width="82" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="9ed-Ey-pNC">
+                                <rect key="frame" x="20" y="679" width="82" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Current Temperature" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="efE-GM-ENQ">
@@ -356,7 +360,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="PQf-U9-6kC">
-                                <rect key="frame" x="18" y="762" width="732" height="23"/>
+                                <rect key="frame" x="18" y="763" width="732" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="UgL-aS-5xB">
@@ -370,6 +374,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="restart_explosion:" destination="Nwe-nv-25i" eventType="touchUpInside" id="dNJ-XD-dNX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="KlV-yX-tKV">
                                 <rect key="frame" x="10" y="821" width="172" height="115"/>
@@ -382,6 +389,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="go_back_one:" destination="Nwe-nv-25i" eventType="touchUpInside" id="wkc-JP-xtv"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2NE-bo-ce5">
                                 <rect key="frame" x="576" y="821" width="172" height="115"/>
@@ -394,6 +404,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="go_forward_one:" destination="Nwe-nv-25i" eventType="touchUpInside" id="Snr-vr-N8o"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Kgr-9q-tf9">
                                 <rect key="frame" x="387" y="821" width="172" height="115"/>
@@ -406,6 +419,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="pause_explosion:" destination="Nwe-nv-25i" eventType="touchUpInside" id="aTw-e1-dY2"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -413,6 +429,7 @@
                     <tabBarItem key="tabBarItem" title="Weather" id="rkG-HW-VD3"/>
                     <connections>
                         <outlet property="additionalInfo" destination="TQN-mM-g8D" id="bf8-RG-xnX"/>
+                        <outlet property="calendarImage" destination="9ed-Ey-pNC" id="HjC-DY-Z2p"/>
                         <outlet property="cloudCover" destination="FCg-uy-d0O" id="809-JL-57Z"/>
                         <outlet property="cloudcoverImage" destination="c8M-sn-1tk" id="6p6-DL-jBE"/>
                         <outlet property="conditionImage" destination="ckS-dU-a01" id="5nt-df-6f6"/>
@@ -423,6 +440,7 @@
                         <outlet property="tempImage" destination="ChC-SW-fX5" id="k1e-P7-L8J"/>
                         <outlet property="temperatureCurrent" destination="efE-GM-ENQ" id="7K5-Hp-dLq"/>
                         <outlet property="time" destination="hx4-lx-dLG" id="gIT-z3-8l1"/>
+                        <outlet property="visImage" destination="RaB-cQ-7BY" id="um0-OV-13P"/>
                         <outlet property="visibility" destination="sNR-Y6-7aE" id="Fpp-fT-SPE"/>
                         <outlet property="windDirection" destination="Nxd-SV-Ix8" id="aH9-1b-QRx"/>
                         <outlet property="windImage" destination="Ibh-Jj-csu" id="ZXU-gJ-HFe"/>
